--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -9,7 +9,9 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-  <h1> HELLO WORKLD THIS IS ENOCK</h1>
+  <h1> HELLO WORLD THIS IS ENOCK</h1>
+  <center> <h1>Hello World, we are software developers!</h1></center>
+  <center> <h1>Gilbert</h1></center>
     <script  src="js/index.js"></script>
   </body>
 </html>
