--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title id="title">our tribute page </title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-
+<main id="main">
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
@@ -14,4 +14,5 @@
   <center> <h1>Gilbert</h1></center>
     <script  src="js/index.js"></script>
   </body>
+</main>
 </html>
