--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -7,11 +7,29 @@
   </head>
 <main id="main">
   <body>
+    <div class="img_div">
+      
+      <div id="img-caption">
+        <img id="" src="./images/Albert.jfif" alt="">
+        <p> Albert Einstein's Photo</p>
+      </div>
+      <div id="tribute-info">
+        <p> Albert was a hero, sceintist, revolutionist, and a father. The world has lost one of its greatest scientist. fro
+          more information visit <a href="https://www.britannica.com/biography/Albert-Einstein" target="_blank"> HERE</a> to learn more.
+        </p>
+
+      </div>
+
+    </div>
+
+
+
+
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-  <h1> HELLO WORLD THIS IS ENOCK</h1>
+  <!-- <h1> HELLO WORLD THIS IS ENOCK</h1>
   <center> <h1>Hello World, we are software developers!</h1></center>
-  <center> <h1>Gilbert</h1></center>
+  <center> <h1>Gilbert</h1></center> -->
     <script  src="js/index.js"></script>
   </body>
 </main>
