--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -5,21 +5,29 @@
     <title id="title">our tribute page </title>
     <link rel="stylesheet" href="css/style.css">
   </head>
-<main id="main">
+
   <body>
-    <div class="img_div">
+    <main id="main">
+    <h1 id="title">
+      Albert Einstein
+		</h1>
+   
+    <div id="img-div">
+      <div id="image">
       
-      <div id="img-caption">
-        <img id="" src="./images/Albert.jfif" alt="">
-        <p> Albert Einstein's Photo</p>
+        <img id="image" src="./images/Albert.jfif" alt="">
+        <div id="img-caption">
+          <p> Albert Einstein's Photo</p>
+        </div>
+        </div>
       </div>
+
       <div id="tribute-info">
         <p> Albert was a hero, sceintist, revolutionist, and a father. The world has lost one of its greatest scientist. fro
-          more information visit <a href="https://www.britannica.com/biography/Albert-Einstein" target="_blank"> HERE</a> to learn more.
+          more information visit 
+          <a id="tribute-link" href="https://www.britannica.com/biography/Albert-Einstein" target="_blank"> EINSTEIN BIOGRAPHY</a> 
+          to learn more.
         </p>
-
-      </div>
-
     </div>
 
 
@@ -31,6 +39,7 @@
   <center> <h1>Hello World, we are software developers!</h1></center>
   <center> <h1>Gilbert</h1></center> -->
     <script  src="js/index.js"></script>
+  </main>
   </body>
-</main>
+
 </html>
